--- a/method_list.html
+++ b/method_list.html
@@ -798,13 +798,21 @@
 
   <li class="odd ">
     <div class="item">
-      <span class='object_link'><a href="Synvert/Core/Configuration.html#root_path-class_method" title="Synvert::Core::Configuration.root_path (method)">root_path</a></span>
+      <span class='object_link'><a href="Synvert/Core/Configuration.html#respect_gitignore-class_method" title="Synvert::Core::Configuration.respect_gitignore (method)">respect_gitignore</a></span>
       <small>Synvert::Core::Configuration</small>
     </div>
   </li>
   
 
   <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Configuration.html#root_path-class_method" title="Synvert::Core::Configuration.root_path (method)">root_path</a></span>
+      <small>Synvert::Core::Configuration</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#ruby_version-instance_method" title="Synvert::Core::Rewriter#ruby_version (method)">#ruby_version</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -812,7 +820,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine/Elegant.html#scan_ruby_expression-instance_method" title="Synvert::Core::Engine::Elegant#scan_ruby_expression (method)">#scan_ruby_expression</a></span>
       <small>Synvert::Core::Engine::Elegant</small>
@@ -820,7 +828,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine/Elegant.html#scan_ruby_interpolation_and_plain_text-instance_method" title="Synvert::Core::Engine::Elegant#scan_ruby_interpolation_and_plain_text (method)">#scan_ruby_interpolation_and_plain_text</a></span>
       <small>Synvert::Core::Engine::Elegant</small>
@@ -828,7 +836,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine/Elegant.html#scan_ruby_statement-instance_method" title="Synvert::Core::Engine::Elegant#scan_ruby_statement (method)">#scan_ruby_statement</a></span>
       <small>Synvert::Core::Engine::Elegant</small>
@@ -836,7 +844,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Configuration.html#show_run_process-class_method" title="Synvert::Core::Configuration.show_run_process (method)">show_run_process</a></span>
       <small>Synvert::Core::Configuration</small>
@@ -844,7 +852,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Configuration.html#single_quote-class_method" title="Synvert::Core::Configuration.single_quote (method)">single_quote</a></span>
       <small>Synvert::Core::Configuration</small>
@@ -852,7 +860,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Configuration.html#skip_paths-class_method" title="Synvert::Core::Configuration.skip_paths (method)">skip_paths</a></span>
       <small>Synvert::Core::Configuration</small>
@@ -860,7 +868,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Configuration.html#strict-class_method" title="Synvert::Core::Configuration.strict (method)">strict</a></span>
       <small>Synvert::Core::Configuration</small>
@@ -868,7 +876,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Helper.html#strip_brackets-instance_method" title="Synvert::Core::Rewriter::Helper#strip_brackets (method)">#strip_brackets</a></span>
       <small>Synvert::Core::Rewriter::Helper</small>
@@ -876,7 +884,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#sub_snippets-instance_method" title="Synvert::Core::Rewriter#sub_snippets (method)">#sub_snippets</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -884,7 +892,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Configuration.html#tab_width-class_method" title="Synvert::Core::Configuration.tab_width (method)">tab_width</a></span>
       <small>Synvert::Core::Configuration</small>
@@ -892,7 +900,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#test-instance_method" title="Synvert::Core::Rewriter#test (method)">#test</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -900,7 +908,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#test-instance_method" title="Synvert::Core::Rewriter::Instance#test (method)">#test</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -908,7 +916,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Configuration.html#test_result-class_method" title="Synvert::Core::Configuration.test_result (method)">test_result</a></span>
       <small>Synvert::Core::Configuration</small>
@@ -916,7 +924,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#test_results-instance_method" title="Synvert::Core::Rewriter#test_results (method)">#test_results</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -924,7 +932,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#unless_exist_node-instance_method" title="Synvert::Core::Rewriter::Instance#unless_exist_node (method)">#unless_exist_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -932,7 +940,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/GemSpec.html#version-instance_method" title="Synvert::Core::Rewriter::GemSpec#version (method)">#version</a></span>
       <small>Synvert::Core::Rewriter::GemSpec</small>
@@ -940,7 +948,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/RubyVersion.html#version-instance_method" title="Synvert::Core::Rewriter::RubyVersion#version (method)">#version</a></span>
       <small>Synvert::Core::Rewriter::RubyVersion</small>
@@ -948,7 +956,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#warn-instance_method" title="Synvert::Core::Rewriter::Instance#warn (method)">#warn</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -956,7 +964,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#warnings-instance_method" title="Synvert::Core::Rewriter#warnings (method)">#warnings</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -964,7 +972,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#within_files-instance_method" title="Synvert::Core::Rewriter#within_files (method)">#within_files</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -972,7 +980,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#within_node-instance_method" title="Synvert::Core::Rewriter::Instance#within_node (method)">#within_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -980,7 +988,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#wrap-instance_method" title="Synvert::Core::Rewriter::Instance#wrap (method)">#wrap</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -988,7 +996,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#wrap_with_quotes-instance_method" title="Synvert::Core::Rewriter::Instance#wrap_with_quotes (method)">#wrap_with_quotes</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
